--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@ const quizzes = [
     title: "翻版MBTI｜港產人格測驗🐧",
     questions: [
       { q: "你喺Party入面通常係邊個角色？", options: [
-        "🐧 企喺角落玩手機（魯迅）", 
-        "🤣 企中間大聲講笑話（周星馳）", 
-        "🤖 幫手收拾、照顧人（多啦A夢）", 
-        "📸 影相打卡，之後IG story洗版（KOL）"
+        "🐧 企喺角落玩手機", 
+        "🤣 企中間大聲講笑話", 
+        "🤖 幫手收拾、照顧人", 
+        "📸 影相打卡，之後IG story洗版"
       ], scores: [1,2,3,4] },
       { q: "你最怕邊種人？", options: [
-        "🗣 八婆", 
+        "🗣 八婆（可能你都係😄）", 
         "🧑‍💼 老細", 
         "👩‍👧 母親", 
         "🪞 自己"
