--- a/index.html
+++ b/index.html
@@ -368,11 +368,11 @@ const quizzes = [
       "https://ibb.co/sJDHKg64", // 企鵝型
       "https://ibb.co/bgYfgrt4", // 多啦A夢型
       "https://ibb.co/0jzdS4h6", // 馬斯克型
-      "https://i.imgur.com/2g3r3lT.png", // IG KOL型
-      "https://i.imgur.com/6Xy9Z3T.png", // 反烏托邦型
-      "https://i.imgur.com/5i5K4lJ.png", // 毒舌型
-      "https://i.imgur.com/1Q9Z1Qk.png", // 斜槓型
-      "https://i.imgur.com/vzZ1Zzv.png"  // 逃避現實型
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4f7.png", // IG KOL型
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f47b.png", // 反烏托邦型
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f92a.png", // 毒舌型
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4bb.png", // 斜槓型
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f634.png"  // 逃避現實型
     ]
   },
   // 2. 發達測驗
