--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@ const quizzes = [
     ],
     resultImages: [
       "https://upload.wikimedia.org/wikipedia/commons/4/49/Elon_Musk_2015.jpg", // 馬斯克級
-      "https://i.imgur.com/2g3r3lT.png", // 補習天王級
-      "https://i.imgur.com/5i5K4lJ.png", // 打工皇帝
-      "https://i.imgur.com/vzZ1Zzv.png"  // 廢青級
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f393.png", // 補習天王級
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f451.png", // 打工皇帝
+      "https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f480.png"  // 廢青級
     ]
   },
   // 3. 討好型人格
