--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>心理測驗｜發達指數 KOL 版</h1>
+    <h1>心理+人格測驗+發達指數+占卜</h1>
     <select id="quiz-select" class="quiz-select"></select>
     <div id="quiz-container"></div>
     <button id="submit-btn" class="submit-btn">提交答案，睇下你幾時發達💸</button>
