--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
       <div id="fortune-result"></div>
 <!-- 捐錢區塊開始 -->
 <div style="background:#fffbe7;border:2px solid #ffe066;padding:18px;border-radius:10px;text-align:center;margin:30px 0;">
-  <h3 style="color:#c0392b;margin-bottom:8px;">💸 捐錢俾站主買杯凍檸茶！</h3>
-  <p style="color:#7a4e00;margin-bottom:8px;">Scan落去AlipayHK支持下啦，唔捐都like下先啦！</p>
-  <img src="https://pplx-res.cloudinary.com/image/upload/v1747527347/user_uploads/10940958/c8d4d259-1cf5-4a70-b7a2-5501a1495096/1000020328.jpg
-" alt="靚仔靚女支持" style="width:180px;max-width:80vw;border-radius:12px;border:2px solid #f7d97d;">
+  <h3 style="color:#c0392b;margin-bottom:8px;">💸 有新測驗遊戲想我加/請飲凍檸茶！</h3>
+  <p style="color:#7a4e00;margin-bottom:8px;">Scan落去AlipayHK支持下啦</p>
+  <img src="https://pplx-res.cloudinary.com/image/upload/v1747527347/user_uploads/10940958/c8d4d259-1cf5-4a70-b7a2-5501a1495096/1000020328.jpg" alt="AlipayHK捐款" style="width:180px;max-width:80vw;border-radius:12px;border:2px solid #f7d97d;">
   <p style="color:#a86e00;font-size:0.97em;margin-top:8px;">（收款戶口：On9Test大佬）</p>
 </div>
 <!-- 捐錢區塊完 -->
+
 
     </div>
   </div>
