Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -563,6 +563,7 @@ const tarotCards = [
 };
 </script>
 
+<script>
 let currentQuizIndex = 0;
 const quizSelect = document.getElementById('quiz-select');
 const quizContainer = document.getElementById('quiz-container');
